# libhoststat

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml  release.yml
include/: hoststat.h
src/: CMakeLists.txt  loadavg.c
src/darwin/: mem.c
src/linux/: mem.c
test/: CMakeLists.txt  hoststat_test.c
